--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,6 @@ image: golang:1.12.7
 variables:
   VERSION: "1.0"
   REGISTRY: "kj187/kubernetes-ingress-linklist"
-  GO111: "on"
-  CGO_ENABLED: "0"
 
 stages:
 - test
@@ -21,8 +19,7 @@ go:build:
   stage: build
   script:
   - mkdir bin
-  - GO111MODULE=${GO111} go mod vendor
-  - GO111MODULE=${GO111} CGO_ENABLED=${CGO_ENABLED} GOOS=linux GOARCH=amd64 go build -o bin/kubernetes-ingress-linklist -mod vendor cmd/kubernetes-ingress-linklist/main.go
+  - make go_build_linux
   artifacts:
     paths:
     - bin/kubernetes-ingress-linklist
