--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,6 +27,12 @@ jobs:
     name: Build
     runs-on: ubuntu-18.04
     steps:
+    - name: Install Go 1.13
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13
+    - name: Check out code
+      uses: actions/checkout@v2 
     - name: Get dependencies   
       run: |
         GO111MODULE=on go mod vendor
