--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,24 +1,25 @@
 name: pipeline
 
 on:
-  release:
-    types: [published]  
   push:
     branches: [ master ]
+    tags: [ * ]
   pull_request:
     branches: [ master ]
+
+env:
+  GO111MODULE: on
+  IMAGE_NAME: kj187/kubernetes-ingress-linklist
 
 jobs:
   lint:
     name: Go Lint
     runs-on: ubuntu-18.04
     steps:
-      - name: Install Go 1.13
-        uses: actions/setup-go@v1
+      - uses: actions/setup-go@v1
         with:
           go-version: 1.13
-      - name: Check out code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Lint Go Code
         run: |
           export PATH=$PATH:$(go env GOPATH)/bin
@@ -27,26 +28,42 @@ jobs:
           
   build:
     name: Build
+    needs: lint
     runs-on: ubuntu-18.04
     steps:
-    - name: Install Go 1.13
-      uses: actions/setup-go@v1
+    - uses: actions/setup-go@v1
       with:
         go-version: 1.13
-    - name: Check out code
-      uses: actions/checkout@v2 
+    - uses: actions/checkout@v2 
     - name: Get dependencies   
-      run: |
-        GO111MODULE=on go mod vendor
-    - name: Build
+      run: GO111MODULE=$GO111MODULE go mod vendor
+    - name: Go Build
       run: |
         mkdir bin
-        GO111MODULE=on CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o bin/kubernetes-ingress-linklist -mod vendor cmd/kubernetes-ingress-linklist/main.go
-    - name: Publish Docker
-      uses: elgohr/Publish-Docker-Github-Action@2.14
-      with:
-        name: kj187/kubernetes-ingress-linklist
-        username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
-        password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-        tags: "latest,${{ env.RELEASE_VERSION }}"
+        GO111MODULE=$GO111MODULE CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o bin/kubernetes-ingress-linklist -mod vendor cmd/kubernetes-ingress-linklist/main.go
+    - name: Docker Build
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME
+    - name: Log into registry
+      run: echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+    - name: Push image
+      run: |
+        IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
         
+        # Change all uppercase to lowercase
+        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+        # Strip git ref prefix from version
+        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+
+        # Strip "v" prefix from tag name
+        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+        # Use Docker `latest` tag convention
+        [ "$VERSION" == "master" ] && VERSION=latest
+
+        echo IMAGE_ID=$IMAGE_ID
+        echo VERSION=$VERSION
+
+        docker tag image $IMAGE_ID:$VERSION
+        docker push $IMAGE_ID:$VERSION
+     
