--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,7 +3,7 @@ name: pipeline
 on:
   push:
     branches: [ master ]
-    tags: [ * ]
+    tags: [ "*" ]
   pull_request:
     branches: [ master ]
 
