Update GitHub actions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,11 +44,15 @@ jobs:
     - name: Docker Build
       run: docker build . --file Dockerfile --tag $IMAGE_NAME
     - name: Log into registry
-      run: echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+      run: echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login -u ${{ github.actor }} --password-stdin
     - name: Push image
       run: |
-        echo "IMAGE_NAME=$IMAGE_NAME"
-        IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
+        echo "IMAGE_NAME: $IMAGE_NAME"
+        echo "github.repository: ${{ github.repository }}"
+        echo "env.GITHUB_REPOSITORY: ${{ env.GITHUB_REPOSITORY }}"
+
+
+        IMAGE_ID=${{ github.repository }}
         
         # Change all uppercase to lowercase
         IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
@@ -65,6 +69,6 @@ jobs:
         echo "IMAGE_ID=$IMAGE_ID"
         echo "VERSION=$VERSION"
 
-        docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-        docker push $IMAGE_ID:$VERSION
+        docker tag $IMAGE_ID $IMAGE_ID:$VERSION
+        docker push $IMAGE_ID
      
