Update GitHub actions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,7 +9,6 @@ on:
 
 env:
   GO111MODULE: on
-  IMAGE_NAME: kj187/kubernetes-ingress-linklist
 
 jobs:
   lint:
@@ -42,29 +41,16 @@ jobs:
         mkdir bin
         GO111MODULE=$GO111MODULE CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o bin/kubernetes-ingress-linklist -mod vendor cmd/kubernetes-ingress-linklist/main.go
     - name: Docker Build
-      run: docker build . --file Dockerfile --tag $IMAGE_NAME
+      run: docker build . --file Dockerfile --tag ${{ github.repository }}
     - name: Log into registry
       run: echo "${{ secrets.DOCKER_REGISTRY_PASSWORD }}" | docker login -u ${{ github.actor }} --password-stdin
     - name: Push image
       run: |
-        echo "IMAGE_NAME: $IMAGE_NAME"
-        echo "github.repository: ${{ github.repository }}"
-        echo "env.GITHUB_REPOSITORY: ${{ env.GITHUB_REPOSITORY }}"
-
-
         IMAGE_ID=${{ github.repository }}
-        
-        # Change all uppercase to lowercase
         IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
-        # Strip git ref prefix from version
-        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
-        # Strip "v" prefix from tag name
-        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
-        # Use Docker `latest` tag convention
-        [ "$VERSION" == "master" ] && VERSION=latest
+        VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')  # Strip git ref prefix from version
+        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')  # Strip "v" prefix from tag name
+        [ "$VERSION" == "master" ] && VERSION=latest  # Use Docker `latest` tag convention
 
         echo "IMAGE_ID=$IMAGE_ID"
         echo "VERSION=$VERSION"
