--- a/chart/k8s-ingress-linklist/Chart.yaml
+++ b/chart/k8s-ingress-linklist/Chart.yaml
@@ -7,4 +7,4 @@ version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 1.1.0
+appVersion: latest
